Small cleanup in documentation

--- a/doc/latex/namespaceteaspoon_1_1_make_data_1_1_point_cloud.tex
+++ b/doc/latex/namespaceteaspoon_1_1_make_data_1_1_point_cloud.tex
@@ -339,7 +339,7 @@ Generate a collection of diagrams with means distributed along a line using the 
 
 
 \begin{DoxyParams}{Parameters}
-{\em N} & The number of initial diagrams pulled to create each diagram. Diagrams could end up with fewer than {\ttfamily N} pts as the pts drawn below the diagonal will be discarded. See \hyperlink{namespaceteaspoon_1_1_make_data_1_1_point_cloud_afb6f087ced9440d9c2834a2a35e4344c}{normal\+Diagram()} for more information. \\
+{\em N} & The number of initial points pulled to create each diagram. Diagrams could end up with fewer than {\ttfamily N} pts as the pts drawn below the diagonal will be discarded. See \hyperlink{namespaceteaspoon_1_1_make_data_1_1_point_cloud_afb6f087ced9440d9c2834a2a35e4344c}{normal\+Diagram()} for more information. \\
 \hline
 {\em num\+Dgms} & The number of diagrams for the collection given as an integer. \\
 \hline
