--- a/doc/latex/namespaceteaspoon_1_1_m_l_1_1tents.tex
+++ b/doc/latex/namespaceteaspoon_1_1_m_l_1_1tents.tex
@@ -17,9 +17,9 @@ def \hyperlink{namespaceteaspoon_1_1_m_l_1_1tents_a6a7e3aad0e7229895aa9f204df7e6
 \begin{DoxyCompactList}\small\item\em Applies the tent function to a diagram. \end{DoxyCompactList}\item 
 def \hyperlink{namespaceteaspoon_1_1_m_l_1_1tents_a2a752f63d55c359140dc7dbbf8fc9b45}{build\+\_\+G} (Dgm\+Series, params)
 \begin{DoxyCompactList}\small\item\em Applies the tent function to all diagrams in the series and outputs the feature matrix $G_{a,b}$ is the $b^{th}$ tent function (after flattening the order) evaluated on the $a^{th}$ diagram in the series. \end{DoxyCompactList}\item 
-def \hyperlink{namespaceteaspoon_1_1_m_l_1_1tents_aaa857d30483517bcf50adde0116e0995}{Tent\+ML} (Dgms\+DF, labels\+\_\+col=\textquotesingle{}training\+Label\textquotesingle{}, dgm\+\_\+col=\textquotesingle{}Dgm1\textquotesingle{}, params=None, verbose=True)
+def \hyperlink{namespaceteaspoon_1_1_m_l_1_1tents_a44f03361919ae7223766344ad9f620df}{Tent\+ML} (Dgms\+DF, labels\+\_\+col=\textquotesingle{}training\+Label\textquotesingle{}, dgm\+\_\+col=\textquotesingle{}Dgm1\textquotesingle{}, params=None, normalize=False, verbose=True)
 \begin{DoxyCompactList}\small\item\em Main function to run ML with tents on persistence diagrams. \end{DoxyCompactList}\item 
-def \hyperlink{namespaceteaspoon_1_1_m_l_1_1tents_a29e1cc2063fa47537bdbf4373fe6cb7e}{get\+Percent\+Score} (Dgms\+DF, labels\+\_\+col=\textquotesingle{}training\+Label\textquotesingle{}, dgm\+\_\+col=\textquotesingle{}Dgm1\textquotesingle{}, params=\hyperlink{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket}{Parameter\+Bucket}(), verbose=True)
+def \hyperlink{namespaceteaspoon_1_1_m_l_1_1tents_a227e874560c3fe1181643b41f65dc92c}{get\+Percent\+Score} (Dgms\+DF, labels\+\_\+col=\textquotesingle{}training\+Label\textquotesingle{}, dgm\+\_\+col=\textquotesingle{}Dgm1\textquotesingle{}, params=\hyperlink{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket}{Parameter\+Bucket}(), normalize=False, verbose=True)
 \begin{DoxyCompactList}\small\item\em Main testing function for classification or regression methods. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
@@ -51,15 +51,16 @@ Applies the tent function to all diagrams in the series and outputs the feature 
 \end{DoxyParams}
 \index{teaspoon\+::\+M\+L\+::tents@{teaspoon\+::\+M\+L\+::tents}!get\+Percent\+Score@{get\+Percent\+Score}}
 \index{get\+Percent\+Score@{get\+Percent\+Score}!teaspoon\+::\+M\+L\+::tents@{teaspoon\+::\+M\+L\+::tents}}
-\subsubsection[{\texorpdfstring{get\+Percent\+Score(\+Dgms\+D\+F, labels\+\_\+col=\textquotesingle{}training\+Label\textquotesingle{}, dgm\+\_\+col=\textquotesingle{}\+Dgm1\textquotesingle{}, params=\+Parameter\+Bucket(), verbose=\+True)}{getPercentScore(DgmsDF, labels_col='trainingLabel', dgm_col='Dgm1', params=ParameterBucket(), verbose=True)}}]{\setlength{\rightskip}{0pt plus 5cm}def teaspoon.\+M\+L.\+tents.\+get\+Percent\+Score (
+\subsubsection[{\texorpdfstring{get\+Percent\+Score(\+Dgms\+D\+F, labels\+\_\+col=\textquotesingle{}training\+Label\textquotesingle{}, dgm\+\_\+col=\textquotesingle{}\+Dgm1\textquotesingle{}, params=\+Parameter\+Bucket(), normalize=\+False, verbose=\+True)}{getPercentScore(DgmsDF, labels_col='trainingLabel', dgm_col='Dgm1', params=ParameterBucket(), normalize=False, verbose=True)}}]{\setlength{\rightskip}{0pt plus 5cm}def teaspoon.\+M\+L.\+tents.\+get\+Percent\+Score (
 \begin{DoxyParamCaption}
 \item[{}]{Dgms\+DF, }
 \item[{}]{labels\+\_\+col = {\ttfamily \textquotesingle{}trainingLabel\textquotesingle{}}, }
 \item[{}]{dgm\+\_\+col = {\ttfamily \textquotesingle{}Dgm1\textquotesingle{}}, }
 \item[{}]{params = {\ttfamily {\bf Parameter\+Bucket}()}, }
+\item[{}]{normalize = {\ttfamily False}, }
 \item[{}]{verbose = {\ttfamily True}}
 \end{DoxyParamCaption}
-)}\hypertarget{namespaceteaspoon_1_1_m_l_1_1tents_a29e1cc2063fa47537bdbf4373fe6cb7e}{}\label{namespaceteaspoon_1_1_m_l_1_1tents_a29e1cc2063fa47537bdbf4373fe6cb7e}
+)}\hypertarget{namespaceteaspoon_1_1_m_l_1_1tents_a227e874560c3fe1181643b41f65dc92c}{}\label{namespaceteaspoon_1_1_m_l_1_1tents_a227e874560c3fe1181643b41f65dc92c}
 
 
 Main testing function for classification or regression methods. 
@@ -109,7 +110,7 @@ Applies the tent function to a diagram.
 \begin{DoxyParams}{Parameters}
 {\em Dgm} & A persistence diagram, given as a \$K  2\$ numpy array \\
 \hline
-{\em params} & An \hyperlink{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket}{tents.\+Parameter\+Bucket} object. Really, we need d, delta, epsilon, and max\+Power from that. \\
+{\em params} & An \hyperlink{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket}{tents.\+Parameter\+Bucket} object. Really, we need d, delta, and epsilon from that. \\
 \hline
 {\em type} & This code accepts diagrams either
 \begin{DoxyItemize}
@@ -121,17 +122,21 @@ Applies the tent function to a diagram.
 \begin{DoxyReturn}{Returns}
 $\sum_{x,y \in \text{Dgm}}g_{i,j}(x,y)$ where \[g_{i,j}(x,y) = \bigg| 1- \max\left\{ \left|\frac{x}{\delta} - i\right|, \left|\frac{y-x}{\delta} - j\right|\right\} \bigg|_+\] where $| * |_+$ is positive part; equivalently, min of $*$ and 0. 
 \end{DoxyReturn}
+\begin{DoxyNote}{Note}
+This code does not take care of the max\+Power polynomial stuff. The \hyperlink{namespaceteaspoon_1_1_m_l_1_1tents_a2a752f63d55c359140dc7dbbf8fc9b45}{build\+\_\+\+G()} function does it after all the rows have been calculated. 
+\end{DoxyNote}
 \index{teaspoon\+::\+M\+L\+::tents@{teaspoon\+::\+M\+L\+::tents}!Tent\+ML@{Tent\+ML}}
 \index{Tent\+ML@{Tent\+ML}!teaspoon\+::\+M\+L\+::tents@{teaspoon\+::\+M\+L\+::tents}}
-\subsubsection[{\texorpdfstring{Tent\+M\+L(\+Dgms\+D\+F, labels\+\_\+col=\textquotesingle{}training\+Label\textquotesingle{}, dgm\+\_\+col=\textquotesingle{}\+Dgm1\textquotesingle{}, params=\+None, verbose=\+True)}{TentML(DgmsDF, labels_col='trainingLabel', dgm_col='Dgm1', params=None, verbose=True)}}]{\setlength{\rightskip}{0pt plus 5cm}def teaspoon.\+M\+L.\+tents.\+Tent\+ML (
+\subsubsection[{\texorpdfstring{Tent\+M\+L(\+Dgms\+D\+F, labels\+\_\+col=\textquotesingle{}training\+Label\textquotesingle{}, dgm\+\_\+col=\textquotesingle{}\+Dgm1\textquotesingle{}, params=\+None, normalize=\+False, verbose=\+True)}{TentML(DgmsDF, labels_col='trainingLabel', dgm_col='Dgm1', params=None, normalize=False, verbose=True)}}]{\setlength{\rightskip}{0pt plus 5cm}def teaspoon.\+M\+L.\+tents.\+Tent\+ML (
 \begin{DoxyParamCaption}
 \item[{}]{Dgms\+DF, }
 \item[{}]{labels\+\_\+col = {\ttfamily \textquotesingle{}trainingLabel\textquotesingle{}}, }
 \item[{}]{dgm\+\_\+col = {\ttfamily \textquotesingle{}Dgm1\textquotesingle{}}, }
 \item[{}]{params = {\ttfamily None}, }
+\item[{}]{normalize = {\ttfamily False}, }
 \item[{}]{verbose = {\ttfamily True}}
 \end{DoxyParamCaption}
-)}\hypertarget{namespaceteaspoon_1_1_m_l_1_1tents_aaa857d30483517bcf50adde0116e0995}{}\label{namespaceteaspoon_1_1_m_l_1_1tents_aaa857d30483517bcf50adde0116e0995}
+)}\hypertarget{namespaceteaspoon_1_1_m_l_1_1tents_a44f03361919ae7223766344ad9f620df}{}\label{namespaceteaspoon_1_1_m_l_1_1tents_a44f03361919ae7223766344ad9f620df}
 
 
 Main function to run ML with tents on persistence diagrams. 
