--- a/teaspoon/ML/MLTentExample.ipynb
+++ b/teaspoon/ML/MLTentExample.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -78,40 +78,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converting the data to ordinal...\n",
-      "Uh oh your support will cross the diagonal, your bottom boundary is  -0.7095354720950127\n",
-      "Shifting the boundary of the partition up by necessary amount...\n",
-      "\n",
-      "Partitions d, delta and epsilon have all been assigned to each partition.\n",
-      "\n"
+     "ename": "NameError",
+     "evalue": "name 'string' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-c8211deb5dfb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdgm_col\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Dgm1'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdgm_col\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mstring\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mdgm_col\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mdgm_col\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mlabels_col\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'trainingLabel'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'string' is not defined"
      ]
     }
    ],
    "source": [
-    "dgm_col = ['Dgm1']\n",
-    "labels_col = ['trainingLabel']\n",
+    "dgm_col = 'Dgm1'\n",
+    "if type(dgm_col) == string:\n",
+    "    dgm_col = [dgm_col]\n",
+    "labels_col = 'trainingLabel'\n",
     "\n",
     "# Set up parameters and adaptively partition training set\n",
     "params = TentParameters()\n",
-    "params.useAdaptivePart == False\n",
     "\n",
     "# Run train/test split using sklearn\n",
-    "D_train, D_test, L_train,L_test = train_test_split(df, df[labels_col], test_size=params.test_size, random_state = params.seed)\n",
+    "D_train, D_test, L_train, L_test = train_test_split(df, df[labels_col], test_size=params.test_size, random_state = params.seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params.useAdaptivePart = True\n",
     "\n",
-    "# Get the portions of the test data frame with diagrams and concatenate into giant series:\n",
+    "# Concatenate training set into a pandas series:\n",
     "allDgms = pd.concat((D_train[label] for label in dgm_col))\n",
     "\n",
     "if params.useAdaptivePart == True:\n",
     "    # Hand the series to the makeAdaptivePartition function\n",
-    "    params.d = [3,3]\n",
-    "    params.makeAdaptivePartition(allDgms, meshingScheme = 'DV', numParts = 3)\n",
+    "    params.d = [3,2]\n",
+    "    params.makeAdaptivePartition(allDgms, dgm_type='BirthDeath', meshingScheme = 'DV', numParts = 2)\n",
     "else:\n",
     "    # Just use the bounding box as the partition\n",
     "    params.d = 3\n",
@@ -126,6 +135,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Plotting Training Set and Partitions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dgm_array = np.concatenate(list(allDgms))\n",
+    "\n",
+    "# Plot partitions and overlay the data\n",
+    "plt.rcParams['figure.figsize'] = [10, 10]\n",
+    "params.partitions.plot()\n",
+    "plt.plot(dgm_array[:,0], dgm_array[:,1] - dgm_array[:,0], 'r*')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Training\n",
     "\n",
     "Use function from teaspoon to run ML with featurization on persistence diagrams. Takes data frame of persistence diagrams and specified column labels, computes the G matrix using *build_G*. Does classification using labels from labels_col in the data frame. Returns trained model."
@@ -133,26 +165,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using 402/600 to train...\n",
-      "Training estimator.\n",
-      "Making G...\n",
-      "Number of features used is 16 ...\n",
-      "Checking score on training set...\n",
-      "Score on training set: 0.8681592039800995.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Using ' + str(len(L_train)) + '/' + str(len(df)) + ' to train...')\n",
-    "clf = ML_via_featurization(D_train, labels_col = labels_col[0], dgm_col = dgm_col, params = params, verbose = True)"
+    "clf = ML_via_featurization(D_train, labels_col = labels_col, dgm_col = dgm_col, params = params, verbose = True)"
    ]
   },
   {
@@ -166,22 +184,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using 198/600 to test...\n",
-      "Score on testing set: 0.8787878787878788...\n",
-      "\n",
-      "Finished with train/test experiment.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#--------Testing-------------#\n",
     "print('Using ' + str(len(L_test)) + '/' + str(len(df)) + ' to test...')\n",
     "listOfG = []\n",
     "for dgmColLabel in dgm_col:\n",
@@ -206,6 +212,13 @@
     "output['DgmsDF'] = df\n",
     "output['clf'] = clf"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
