Minor changes to basic example

--- a/teaspoon/ML/BasicTentExample.ipynb
+++ b/teaspoon/ML/BasicTentExample.ipynb
@@ -149,6 +149,8 @@
     "- W/out Adaptive Partitioning: \\# Cols = $(d+1)\\times(d+1)$\n",
     "- With  Adaptive Partitioning: \\# Cols = $(d+1)\\times(d+1) \\times numPartitions$ \n",
     "\n",
+    "Note: *build_G* assumes pd.Series of persistence diagrams is in BirthDeath Coordinates.\n",
+    "\n",
     "To visualize G, uncomment the plotting commands below."
    ]
   },
