Added example of using getPercentScore

--- a/teaspoon/ML/MLTentExample.ipynb
+++ b/teaspoon/ML/MLTentExample.ipynb
@@ -18,7 +18,7 @@
     "import numpy as np\n",
     "from scipy import stats\n",
     "\n",
-    "from teaspoon.ML.Base import ParameterBucket, build_G, TentParameters, train_test_split, ML_via_featurization\n",
+    "from teaspoon.ML.Base import ParameterBucket, build_G, TentParameters, train_test_split, ML_via_featurization, getPercentScore\n",
     "from teaspoon.MakeData import PointCloud as gpc\n",
     "from scipy import stats\n",
     "import matplotlib.pyplot as plt\n",
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train Test Split & Set up Parameter Bucket\n",
+    "## Long Version: Train Test Split & Set up Parameter Bucket\n",
     " \n",
     "### Train Test Split:\n",
     " - Choose which column (or columns) you want to use for diagrams\n",
@@ -73,29 +73,19 @@
     " - Need a TentParameters parameter bucket. \n",
     " - Set parameter d for mesh size in each direction.\n",
     " - Get adaptive partitions. \n",
-    " - Set delta and epsilon for each partition."
+    " - Set delta and epsilon for each partition.\n",
+    " \n",
+    " Note, these steps are all handled by the function *getPercentScore*. For the shortened version using this function scroll down."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'string' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-c8211deb5dfb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdgm_col\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Dgm1'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdgm_col\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mstring\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mdgm_col\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mdgm_col\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mlabels_col\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'trainingLabel'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'string' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dgm_col = 'Dgm1'\n",
-    "if type(dgm_col) == string:\n",
+    "if type(dgm_col) == str:\n",
     "    dgm_col = [dgm_col]\n",
     "labels_col = 'trainingLabel'\n",
     "\n",
@@ -113,17 +103,16 @@
    "outputs": [],
    "source": [
     "params.useAdaptivePart = True\n",
+    "params.d = [3,3]\n",
     "\n",
     "# Concatenate training set into a pandas series:\n",
     "allDgms = pd.concat((D_train[label] for label in dgm_col))\n",
     "\n",
     "if params.useAdaptivePart == True:\n",
     "    # Hand the series to the makeAdaptivePartition function\n",
-    "    params.d = [3,2]\n",
-    "    params.makeAdaptivePartition(allDgms, dgm_type='BirthDeath', meshingScheme = 'DV', numParts = 2)\n",
+    "    params.makeAdaptivePartition(allDgms, meshingScheme = 'DV', numParts = 2)\n",
     "else:\n",
     "    # Just use the bounding box as the partition\n",
-    "    params.d = 3\n",
     "    params.makeAdaptivePartition(allDgms, meshingScheme = 'None')\n",
     "    \n",
     "# Assign delta and epsilon for each partition\n",
@@ -201,7 +190,7 @@
     "df['Prediction'] = L_predict\n",
     "\n",
     "# Compute score\n",
-    "score = clf.score(G,list(L_test['trainingLabel']))\n",
+    "score = clf.score(G,list(L_test))\n",
     "\n",
     "print('Score on testing set: ' + str(score) +\"...\\n\")\n",
     "\n",
@@ -214,11 +203,76 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Short Version: Train Test Split & Set up Parameter Bucket\n",
+    "\n",
+    "Use function *getPercentScore* to set up parameter bucket, do train/test split and calculate accuracy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---\n",
+      "Beginning experiment.\n",
+      "Variables in parameter bucket\n",
+      "---\n",
+      "feature_function : <function tent at 0x1a1bf63378>\n",
+      "useAdaptivePart : True\n",
+      "d : [3, 3]\n",
+      "delta : 1\n",
+      "epsilon : 0\n",
+      "clf_model : <class 'sklearn.linear_model.ridge.RidgeClassifierCV'>\n",
+      "seed : None\n",
+      "test_size : 0.33\n",
+      "maxPower : 1\n",
+      "---\n",
+      "\n",
+      "Converting the data to ordinal...\n",
+      "\n",
+      "Parameters d, delta and epsilon have all been assigned to each partition...\n",
+      "\n",
+      "Using 402/600 to train...\n",
+      "Training estimator.\n",
+      "Making G...\n",
+      "Number of features used is 4848 ...\n",
+      "Checking score on training set...\n",
+      "Score on training set: 0.9900497512437811.\n",
+      "\n",
+      "Using 198/600 to test...\n",
+      "Score on testing set: 0.9090909090909091...\n",
+      "\n",
+      "Finished with train/test experiment.\n",
+      "\n",
+      "avg success rate = 0.9090909090909091\n",
+      "Stdev = 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "params = TentParameters()\n",
+    "params.useAdaptivePart = True\n",
+    "params.d = [3,3]\n",
+    "\n",
+    "num_runs = 1\n",
+    "yy = np.zeros((num_runs))\n",
+    "for i in np.arange(num_runs):\n",
+    "    xx, Dgms_train, Dgms_test = getPercentScore(df,\n",
+    "                    labels_col = 'trainingLabel',\n",
+    "                    dgm_col = 'Dgm1',\n",
+    "                    params = params,\n",
+    "                    verbose = True)\n",
+    "    yy[i] = xx['score']\n",
+    "\n",
+    "print('\\navg success rate = {}\\nStdev = {}'.format(np.mean(yy), np.std(yy)))"
+   ]
   },
   {
    "cell_type": "code",
