Minor change to basic example

--- a/teaspoon/ML/BasicTentExample.ipynb
+++ b/teaspoon/ML/BasicTentExample.ipynb
@@ -147,7 +147,7 @@
     "- Each row corresponds to a single diagram\n",
     "- Each column represents a single tent function\n",
     "- W/out Adaptive Partitioning: \\# Cols = $(d+1)\\times(d+1)$\n",
-    "- With  Adaptive Partitioning: \\# Cols = $(d+1)\\times(d+1) \\times numPartitions$ \n",
+    "- With  Adaptive Partitioning: \\# Cols = $(d+1)\\times(d+1)\\times$(Num of Partitions) \n",
     "\n",
     "Note: *build_G* assumes pd.Series of persistence diagrams is in BirthDeath Coordinates.\n",
     "\n",
