--- a/tests/teaspoon_demo/teaspoon_demo.ipynb
+++ b/tests/teaspoon_demo/teaspoon_demo.ipynb
@@ -1355,7 +1355,7 @@
     "PerLand=np.ndarray(shape=(6),dtype=object)\n",
     "for i in range(0, 6):\n",
     "    Land=PLandscape(Diagrams_H1[i])\n",
-    "    PerLand[i]=Land.AllP\n",
+    "    PerLand[i]=Land.AllPL\n",
     "#choose landscape number for which feature matrix will be computed\n",
     "L_number = [2]\n",
     "#compute feature matrix\n",
@@ -1906,7 +1906,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
