Removed the path signatures classification code

--- a/tests/teaspoon_demo/teaspoon_demo.ipynb
+++ b/tests/teaspoon_demo/teaspoon_demo.ipynb
@@ -1683,7 +1683,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1718,79 +1720,6 @@
     "params.FN = 5\n",
     "print(params)\n",
     "results = CL_PD.CL_CC(Diagrams_H1_1,params,Diagrams_H1_2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Path Signatures**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import teaspoon.ML.feature_functions as Ff\n",
-    "import teaspoon.ML.PD_Classification as CL_PD\n",
-    "from teaspoon.ML.Base import CL_ParameterBucket\n",
-    "from teaspoon.MakeData.PointCloud import testSetManifolds\n",
-    "from sklearn.svm import SVC\n",
-    "# generate two sets of persistence diagrams\n",
-    "df_1 = testSetManifolds(numDgms = 5, numPts = 100)\n",
-    "df_2 = testSetManifolds(numDgms = 5, numPts = 100)\n",
-    "Diagrams_H1_1= df_1['Dgm1'].sort_index().values\n",
-    "Diagrams_H1_2= df_2['Dgm1'].sort_index().values\n",
-    "# labels\n",
-    "Labels_1 = df_1['trainingLabel'].sort_index().values\n",
-    "Labels_2 = df_2['trainingLabel'].sort_index().values\n",
-    "#compute persistence landscapes for both sets of persistence diagram\n",
-    "PerLand1=np.ndarray(shape=(60),dtype=object)\n",
-    "PerLand2=np.ndarray(shape=(60),dtype=object)\n",
-    "for i in range(0, 30):\n",
-    "    Land=Ff.PLandscape(Diagrams_H1_1[i])\n",
-    "    PerLand1[i]=Land.AllPL\n",
-    "    Land=Ff.PLandscape(Diagrams_H1_2[i])\n",
-    "    PerLand2[i]=Land.AllPL\n",
-    "# compute features using first landscapes\n",
-    "features1 = Ff.F_PSignature(PerLand1,L_Number=[1])\n",
-    "features2 = Ff.F_PSignature(PerLand2,L_Number=[1])\n",
-    "# traditional classification\n",
-    "# adjust parameters\n",
-    "params = CL_ParameterBucket()\n",
-    "params.clf_model = SVC\n",
-    "params.test_size =0.33\n",
-    "params.Labels = Labels1\n",
-    "params.TF_Learning = False\n",
-    "print(params)\n",
-    "results = CL_PS(features,params)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Classification using transfer learning"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#transfer learning\n",
-    "params = CL_ParameterBucket()\n",
-    "params.clf_model = SVC\n",
-    "params.test_size =0.33\n",
-    "params.training_labels = Labels1\n",
-    "params.test_labels = Labels2\n",
-    "params.TF_Learning = True\n",
-    "print(params)\n",
-    "results = CL_PS(features1,params,features2)"
    ]
   },
   {
@@ -1907,7 +1836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
